# Horizon

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  Horizon (old).pro  Horizon.pro  README.md  appveyor.yml  cmake_install.cmake  version.cmake  workspace.code-workspace
assets/: core.qrc  resources.qrc  styles.qss  themes.qrc
assets/app_icon/: icon.icns
assets/bundle/themes/: default-dark.json
assets/core/other/: test.pkf
assets/themes/: Nautic.json  Neon.json  Vodka.json  default-dark.json
misc/assets/: core.qrc  generate_macOS_icons.sh  resources.qrc  styles.qss
misc/assets/app_icon/: Horizon.icns  icon_old2.icns  icon_old4.icns
misc/assets/bundle/: prefs.json  project.icns
misc/assets/bundle/themes/: Acid.json  Default.json  FL.json  High Contrast.json  Nautic.json  Neon.json  jaffa-cake.json  sand-castle.json
misc/assets/svg/: stop.ai
scripts/macOS/: after_build.sh  env.sh
scripts/win/: after_build.sh  deploy.sh  env.sh
shared/: Info.plist  horizon.iss
src/: CMakeLists.txt  Horizon.cpp  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  arrangewidget.cpp  arrangewidget.h  arrangewidget.ui  audiomanager.cpp  audiomanager.h  audioregion.cpp  audioregion.h  audioregionmanager.cpp  audioregionmanager.h  audioutil.cpp  audioutil.h  cmake_install.cmake  colorpickerwidget.cpp  colorpickerwidget.h  colorpickerwidget.ui  debug.cpp  debug.h  effectwidget.ui  ghostplayhead.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  grid.cpp  grid.h  infowidget.h  infowidget.ui  librarywidget.cpp  librarywidget.h  librarywidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metronome.cpp  (+30 more)
src/__/assets/: core.qrc.depends
src/app/: EffectTypes.h  audioeffect.cpp  audioeffect.h  audiomanager.cpp  audiomanager.h  audioregion.cpp  audioregion.h  audioschedulingthread.cpp  audioschedulingthread.h  bog.cpp  bog.h  enginethread.cpp  enginethread.h  fileloading.cpp  fileloading.h  filerendering.cpp  filerenderingh.tmp  getsharedmemory.cpp  getsharedmemory.h  indexingthread.cpp  indexingthread.h  metronome.cpp  metronome.h  projectserialization.cpp  projectserialization.h  region.cpp  region.h  track.cpp  track.h
src/app/audio_effects/: compressoreffect.cpp  compressoreffect.h  reverbeffect.cpp  reverbeffect.h
src/common/: audioutil.h  debug.cpp  debug.h  dialogs.cpp  dialogs.h  haptictouchpad.h  haptictouchpad.m  preferences.cpp  preferences.h  thememanager.cpp  thememanager.h  timer.cpp  timer.h  timerex.cpp  timerex.h  util.cpp  util.h  version.h.in
src/common/darwin/: haptictouchpad.h  haptictouchpad.mm  touchbar.h  touchbar.mm
src/gui/: aboutdialogwidget.cpp  aboutdialogwidget.h  aboutdialogwidget.ui  arrangewidget.cpp  arrangewidget.h  arrangewidget.ui  audioeffectwindow.cpp  audioeffectwindow.h  audioeffectwindow.ui  colorpickerwidget.cpp  colorpickerwidget.h  colorpickerwidget.ui  debugprofilerwindow.cpp  debugprofilerwindow.h  debugprofilerwindow.ui  effectwidget.cpp  effectwidget.h  effectwidget.ui  ghostplayhead.cpp  ghostplayhead.h  graphicsscene.cpp  graphicsview.cpp  graphicsview.h  guiupdatethread.cpp  guiupdatethread.h  infowidget.cpp  infowidget.h  infowidget.ui  internalnotificationwidget.cpp  internalnotificationwidget.h  internalnotificationwidget.ui  librarywidget.cpp  librarywidget.h  librarywidget.ui  loadingdialogwidget.cpp  loadingdialogwidget.h  loadingdialogwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+50 more)
src/gui/audio_effects/: compressoreffectwindow.cpp  compressoreffectwindow.h  compressoreffectwindow.ui  reverbfxwindow.cpp  reverbfxwindow.h  reverbfxwindow.ui
src/gui/ui_controls/: horizondial.cpp  horizondial.h  horizonmeter.cpp  horizonmeter.h  horizonpushbutton.cpp  horizonpushbutton.h  horizontoolbutton.cpp  horizontoolbutton.h
src/network/: client.cpp  client.h  session.cpp  session.h  uac.cpp  uac.h
